--- a/tsconfig.json
+++ b/tsconfig.json
@@ -89,7 +89,7 @@
         // "allowSyntheticDefaultImports": true,             /* Allow 'import x from y' when a module doesn't have a default export. */
         "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
         // "preserveSymlinks": true,                         /* Disable resolving symlinks to their realpath. This correlates to the same flag in node. */
-        "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
+        "forceConsistentCasingInFileNames": false /* Ensure that casing is correct in imports. */,
 
         /* Type Checking */
         "strict": true /* Enable all strict type-checking options. */,
@@ -122,5 +122,8 @@
         "resources/js/**/*.d.ts",
         "resources/js/**/*.tsx", 
         "resources/js/**/*.vue"
+    ],
+    "exclude": [
+        "resources/js/Pages/**"
     ]
 }
